# quanta

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  build-windows.bat  build.sh  console.cpp  test.js
.github/: FUNDING.yml
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
core/builtin/include/: Date.h  Error.h  array_builtin.h  builtin_registry.h  error_builtin.h  function_builtin.h  global_builtin.h  math_builtin.h  object_builtin.h  string_builtin.h
core/builtin/src/: Math.cpp  String.cpp  array_builtin.cpp  builtin_registry.cpp  error_builtin.cpp  function_builtin.cpp  global_builtin.cpp  math_builtin.cpp  object_builtin.cpp  string_builtin.cpp
core/collections/include/: MapSet.h  map.h  set.h  weak_map.h  weak_set.h
core/collections/src/: map.cpp  set.cpp  weak_map.cpp  weak_set.cpp
core/compiler/include/: AdvancedJIT.h  JIT.h  jit_compiler.h
core/compiler/src/: Bytecode.cpp  FastBytecode.cpp  JIT.cpp  jit_compiler.cpp
core/context/: context_core.h
core/context/include/: context_bindings.h  context_core.h
core/context/src/: context_core.cpp
core/datatypes/include/: DataView.h  SIMD.h  TypedArray.h  data_view.h
core/datatypes/src/: TypedArray.cpp  data_view.cpp
core/engine/include/: engine_builtins.h  engine_core.h  engine_execution.h  engine_nodejs.h
core/engine/src/: engine_builtins.cpp  engine_core.cpp  engine_execution.cpp  engine_nodejs.cpp
core/gc/include/: garbage_collector.h  gc_collection.h  gc_management.h  memory_pool.h
core/gc/src/: gc_management.cpp
core/global/: global_functions.h
core/global/include/: global_functions.h
core/global/src/: global_functions.cpp
core/include/: AdaptiveOptimizer.h  AdvancedDebugger.h  AdvancedGC.h  AdvancedInlineCache.h  AdvancedJIT.h  AdvancedObjectOptimizer.h  AdvancedOptimizer.h  ArrayBuffer.h  ArrayOptimizer.h  Async.h  BigInt.h  BranchOptimization.h  BranchPredictionOptimizer.h  Bytecode.h  CPUOptimization.h  Common.h  Context.h  Date.h  Engine.h  Error.h  FastBytecode.h  GC.h  GenerationalGC.h  Generator.h  HiddenClass.h  HighPerformance.h  InlineCache.h  Iterator.h  JIT.h  JSON.h  LockFree.h  LoopUnrollOptimizer.h  MapSet.h  Math.h  ModuleLoader.h  NUMAMemoryManager.h  NativeArrayOps.h  NativeCodeGenerator.h  NativeFFI.h  NodeJS.h  (+31 more)
core/include/PhotonCore/: PhotonCoreAcceleration.h  PhotonCoreFS.h  PhotonCoreHPS.h  PhotonCorePerformance.h  PhotonCoreQuantum.h  PhotonCoreSonic.h  PhotonCoreTurbo.h  PhotonCoreVelocity.h
core/include/graphics/: OpenGLClean.h
core/include/platform/: APIRouter.h  NativeAPI.h  WindowsHeaders.h
core/include/quanta/: ArrayBuffer.h  Async.h  BigInt.h  Bytecode.h  CallStack.h  Common.h  Context.h  DataView.h  Date.h  Engine.h  Error.h  FastBytecode.h  GC.h  GenerationalGC.h  Generator.h  HiddenClass.h  Iterator.h  JIT.h  JSON.h  MapSet.h  Math.h  ModuleLoader.h  NativeArrayOps.h  NativeCodeGenerator.h  NativeFFI.h  NodeJS.h  Object.h  Promise.h  ProxyReflect.h  RealJIT.h  RegExp.h  SpecializedNodes.h  Symbol.h  Temporal.h  TypedArray.h  UltimatePatternDetector.h  Value.h  WebAPI.h  WebAPIInterface.h  WebAssembly.h
core/memory/include/: GenerationalGC.h  LockFree.h  NUMAMemoryManager.h  garbage_collector.h  memory_pool.h
core/memory/src/: NUMAMemoryManager.cpp  Symbol.cpp  garbage_collector.cpp  memory_pool.cpp
core/object/include/: object_core.h  object_factory.h  object_properties.h  property_descriptor.h  shape.h
core/object/src/: HiddenClass.cpp  object_factory.cpp  object_properties.cpp  object_shapes.cpp  property_descriptor.cpp  shape.cpp
core/platform/include/: NativeFFI.h  platform_detection.h
core/platform/src/: macOSNativeAPI.cpp
core/runtime/include/: Async.h  Promise.h  ProxyReflect.h  WebAssembly.h  async_runtime.h
core/runtime/src/: WebAPI.cpp  async_runtime.cpp
core/src/: AdaptiveOptimizer.cpp  AdvancedDebugger.cpp  AdvancedJIT.cpp  AdvancedObjectOptimizer.cpp  AdvancedOptimizer.cpp  ArrayBuffer.cpp  ArrayOptimizer.cpp  Async.cpp  BigInt.cpp  BranchPredictionOptimizer.cpp  Bytecode.cpp  CPUOptimization.cpp  CallStack.cpp  Context.cpp  DataView.cpp  Date.cpp  Engine.cpp  Error.cpp  FastBytecode.cpp  Function.cpp  GC.cpp  GenerationalGC.cpp  Generator.cpp  HiddenClass.cpp  HighPerformance.cpp  InlineCache.cpp  Iterator.cpp  JIT.cpp  JSON.cpp  LockFree.cpp  LoopUnrollOptimizer.cpp  MapSet.cpp  Math.cpp  ModuleLoader.cpp  NUMAMemoryManager.cpp  NativeCodeGenerator.cpp  NativeFFI.cpp  NodeJS.cpp  Object.cpp  OptimizedAST.cpp  (+28 more)
core/src/PhotonCore/: PhotonCoreAcceleration.cpp  PhotonCoreFS.cpp  PhotonCoreHPS.cpp  PhotonCorePerformance.cpp  PhotonCoreQuantum.cpp  PhotonCoreSonic.cpp  PhotonCoreTurbo.cpp  PhotonCoreVelocity.cpp
core/src/platform/: APIRouter.cpp  AndroidNativeAPI.cpp  LinuxNativeAPI.cpp  NativeAPI.cpp  WindowsNativeAPI.cpp  iOSNativeAPI.cpp  macOSNativeAPI.cpp
core/utils/include/: AdvancedDebugger.h  CallStack.h  SpecializedNodes.h  json_parser.h
core/utils/src/: json_parser.cpp
core/value/include/: value_conversions.h  value_core.h  (+1 more)
docs/documents/: README  README.txt  architecture.md  test262-results.md
examples/: hello.js  variables.js
include/: ast.h  ast_printer.h  interpreter.h  lexer.h  parser.h  token.h  token_type.h
lexer/include/: Lexer.h  Token.h
lexer/src/: Lexer.cpp  Token.cpp
parser/include/: AST.h  Parser.h
parser/src/: AST.cpp  Parser.cpp
quanta-nonready/include/: ast.h  dom.h  env.h  error.h  framework.h  gc.h  hash_workaround.h  interpreter.h  ir.h  jit.h  lexer.h  parser.h  runtime_objects.h  stdlib.h  vdom.h
quanta-nonready/src/: dom.cpp  env.cpp  error.cpp  framework.cpp  gc.cpp  interpreter.cpp  ir.cpp  jit.cpp  lexer.cpp  main.cpp  parser.cpp  runtime_objects.cpp  stdlib.cpp  vdom.cpp
quanta-nonready/test/: advanced.js  simple.js
src/: main.cpp
src/interpreter/: interpreter.cpp
src/lexer/: Lexer.cpp  Token.cpp  lexer.cpp  token.cpp  token_type.cpp
src/parser/: AST.cpp  Parser.cpp  ast_printer.cpp  parser.cpp
src/repl/: repl.cpp  repl.h
tests/gc/: heap_test.cpp
tests/runtime/: shape_test.cpp
(+208 files in other folders)
